- Made Pet Experience only obtained by breaking blocks with an Egg or Player Head within Inventory - Added Package Directory to QuestsDisplay